bugfix imgs too tall pushing captions out of flow

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -460,6 +460,8 @@ button {
       justify-content: center;
       flex: 7;
 
+      overflow: auto;
+
     }
   }
 
